# bert-inference-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  locustfile.py  main.py  pyproject.toml
